app/styles/styles.scss
@import "size-mixins";
@import "colors";
@import "bootstrap.min.scss";
@import "nanogallery2.woff.min.scss";
@import "nanogallery2.min.scss";
@import "footer";
@import "header";
@import "faq";
@import "_gallery.scss";

html,
body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
  font-size: 1vw;
  line-height: normal;
}

body,
div,
p,
span,
h1,
h2,
h3,
h4,
h5,
h6,
ul,
li,
a,
strong {
  text-rendering: optimizeLegibility !important;
}

